# rate-currency-tracker

./: .gitignore  README.md
diagram/: Currency Tracker.drawio
lambdas/exchange-rate-reader/: .env.template  package.json  testHandler.ts  tsconfig.json
lambdas/exchange-rate-reader/src/: index.ts
lambdas/exchange-rate-reader/src/db/: dynamoConnection.ts
lambdas/exchange-rate-reader/src/interfaces/: exchangeRateData.interface.ts
lambdas/exchange-rate-reader/src/services/: exchangeRate.services.ts
lambdas/exchange-rate-reader/src/utils/: helpers.ts
lambdas/image-processor/: Makefile  README.md  pyproject.toml  requirements.txt  test_handler.py
lambdas/image-processor/src/image_processor/: .env.template  __init__.py
lambdas/image-processor/src/image_processor/services/: images_service.py
terraform/dev/: inputs.tf  main.tf
terraform/dev/.terraform/modules/: modules.json
terraform/modules/dynamodb/: inputs.tf  main.tf  outputs.tf
terraform/modules/lambda/: inputs.tf  main.tf
terraform/modules/s3/: main.tf
terraform/modules/services/: main.tf
